--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </nav>
     </div>
 
-    <p>불확실성속에서 아름다움을 찾기까지</p>
+    <p>불확실성속에서 아름다움을 찾기까지.</p>
     <div>
       <!-- TradingView Widget BEGIN -->
       <div class="tradingview-widget-container">
